# libwebcam

./: CMakeLists.txt  README.md  build.gradle  build_debug.sh  build_release.sh  cmake.bat  index.html  index.md  ms_cmake.bat  settings.gradle  webcamserver
examples/: build.gradle
examples/bitmap_writer/: CMakeLists.txt  bitmap_writer.cpp  ms_cmake.bat
examples/enumerate/: CMakeLists.txt  enumerator.cpp  ms_cmake.bat
examples/enumerator/: CMakeLists.txt  cmake.sh  enumerator.cpp  ms_cmake.bat
examples/grabber/: CMakeLists.txt  cmake.sh  grabber.cpp  ms_cmake.bat
examples/src/main/java/: ExampleLibWebcam.java
installation/: cmake.sh  init_vars.bat  ms_cmake.bat  test.bat
libwebcam/: CMakeLists.txt  webcam.h
libwebcam-jni/: CMakeLists.txt  build.gradle
libwebcam-jni/src/main/cpp/: Webcam.cpp
libwebcam-jni/src/main/java/libwebcam/: ControlInfo.java  Device.java  DeviceInfo.java  Image.java  ModelInfo.java  Parameter.java  VideoInfo.java  VideoSettings.java  Webcam.java  WebcamArray.java  WebcamDriver.java  WebcamImage.java
libwebcam-jni/src/main/java/utils/: NativeUtils.java
libwebcam-jni/src/test/java/libwebcam/: TestWebcam.java  TestWebcamDriver.java
libwebcam/device/: Device.cpp  Device.h  WebcamImpl.cpp  WebcamImpl.h  device.cpp  device.h  webcam_impl.cpp  webcam_impl.h
libwebcam/device/os/lin/: lin_enumerator.cpp  lin_enumerator.h  lin_webcam_impl.cpp  lin_webcam_impl.h
libwebcam/device/os/win/: CComPtr.h  device_info_provider.cpp  device_info_provider.h  grabber.cpp  grabber.h  qedit.h  win_enumerator.cpp  win_enumerator.h  win_webcam_impl.cpp  win_webcam_impl.h  win_webcam_utils.cpp  win_webcam_utils.h
libwebcam/device/state/: closed.cpp  closed.h  open.cpp  open.h  state.cpp  state.h
libwebcam/enumerator/: enumerator.h
libwebcam/error/: enumerator_exception.cpp  enumerator_exception.h  webcam_exception.cpp  webcam_exception.h
libwebcam/image/: Format.cpp  Format.h  Image.cpp  Image.h  VideoSettings.cpp  VideoSettings.h  format.cpp  format.h  image.cpp  image.h  video_settings.cpp  video_settings.h
libwebcam/image/os/lin/: lin_format.cpp
libwebcam/image/os/win/: win_format.cpp
libwebcam/info/: BasicInfo.cpp  BasicInfo.h  DeviceInfo.cpp  DeviceInfo.h  DeviceInfoEnumeration.cpp  DeviceInfoEnumeration.h  DeviceInfoParser.cpp  DeviceInfoParser.h  ElementInfoEnumeration.cpp  ElementInfoEnumeration.h  Indexable.cpp  Indexable.h  ModelInfo.cpp  ModelInfo.h  Nameable.cpp  Nameable.h  VendorInfo.cpp  VendorInfo.h  VendorModelIndices.cpp  VendorModelIndices.h  VideoInfo.cpp  VideoInfo.h  VideoInfoEnumeration.cpp  VideoInfoEnumeration.h  basic_info.cpp  basic_info.h  device_info.cpp  device_info.h  device_info_enumeration.cpp  device_info_enumeration.h  device_info_parser.cpp  device_info_parser.h  element_info_enumeration.cpp  element_info_enumeration.h  indexable.cpp  indexable.h  model_info.cpp  model_info.h  nameable.cpp  nameable.h  (+8 more)
libwebcam/utils/: Buffer.cpp  Buffer.h  SyncBuffer.cpp  SyncBuffer.h  TextUtils.cpp  TextUtils.h  buffer.cpp  buffer.h  sync_buffer.cpp  sync_buffer.h  text_utils.cpp  text_utils.h
